# projet-structures-de-donnees

./: .gitignore  README.md  arrays_window.c  curve_window.h  graph_algorithms.c  graphs_window.c  list_algorithms.c  list_algorithms.h  lists_window.c  lists_window.h  main.c  sort_algorithms.c  style.css  tree_algorithms.c  tree_algorithms.h  trees_window.c  trees_window.h
c-gtk4/: CMakeLists.txt  README.md  arrays_window.h  curve_window.c  graph_algorithms.h  graphs_window.h  sort_algorithms.h
python/: README.md  miniSysteme.py  requirements.txt
